게시판 컴포넌트 설정 미반영 이슈 수정

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -857,7 +857,7 @@
 				
 				// 메인화면 배너 조회 결과가 있을 경우
 				if(i < data.length){
-					html += '<div class="swiper-slide" align="center" style="background-color:#ffffff;">';
+					html += '<div class="swiper-slide1" align="center" style="background-color:#ffffff;">';
 					html += '	<a href="' + data[i].bnnMLndUrl + '">';
 		    		html += '		<img src="' + data[i].bnnMmImgUrl + '" alt="">';
 		    		html += '	</a>';
@@ -865,7 +865,7 @@
 					
 				// 메인화면 배너 조회 결과가 없을 경우	
 				}else{
-					html += '<div class="swiper-slide" align="center" style="background-color:#ffffff;">';
+					html += '<div class="swiper-slide1" align="center" style="background-color:#ffffff;">';
 					html += '	<a href="https://www.dealing-art.com/main">';
 		    		html += '		<img src="/resources/img/bigLogo2.png" alt="">';
 		    		html += '	</a>';
