커뮤니티 상세 페이지 댓글 기능 유무 확인 및 댓글 기능 활성화/비활성화 처리

--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -128,6 +128,7 @@
  	var otherComt = /*[[${otherComt}]]*/ 'default';
  	var showOff = null;
  	var message = /*[[${message}]]*/ 'default' //커뮤니티 순번
+ 	var boardAuth = /*[[${boardAuth}]]*/ 'default'; // 컴포넌트 권한 및 사용 유무
 	if(message != "" && message != null){
 		alert(message);
 		location.href = "/main";
@@ -144,11 +145,12 @@
     	otherComtWorkList(otherComt, "/community/exhibitDetail");
     	initOtherComtWorkListSwiper();
     	
-    	setComment(comtSq);
+    	setComment(comtSq, "EXH");
     	
     	setReportModal();
 		setReportCompleteModal();
 		setReportErrorModal();
+		
     });
     
     // 커뮤니티 정보 셋팅
@@ -178,10 +180,10 @@
 	    strHtml += '    <div class="icon_box">';
 	    strHtml += '        <ul>';
 	    strHtml += '            <li class="day">'+ (comt.dateDiff >= 24 ? comt.comtRegDt.substring(0, comt.comtRegDt.length-3) : setTimeFormat(comt.comtRegDt)) +'</li>';
-	    strHtml += '            <li><p class="ico_good"   onclick="likeCheckYn(' + comt.comtSq + ');" style="cursor: pointer;"></p><span>'+ comt.comtLikes +'</span></li>';
-	    strHtml += '            <li onclick="scrapCheck('+comtSq+');" style="cursor: pointer;"><p class="ico_scrap"></p><span>'+ comt.comtScraps +'</span></li>';
-	    strHtml += '            <li><p class="ico_hits"></p><span>'+ comt.comtViews +'</span></li>';
-	    strHtml += '            <li><p class="ico_comments"></p><span>'+ comt.comtCmts +'</span></li>';
+	    strHtml += '            <li class="like"><p class="ico_good"   onclick="likeCheckYn(' + comt.comtSq + ');" style="cursor: pointer;"></p><span>'+ comt.comtLikes +'</span></li>';
+	    strHtml += '            <li class="scrap" onclick="scrapCheck('+comtSq+');" style="cursor: pointer;"><p class="ico_scrap"></p><span>'+ comt.comtScraps +'</span></li>';
+	    strHtml += '            <li class="view"><p class="ico_hits"></p><span>'+ comt.comtViews +'</span></li>';
+	    strHtml += '            <li class="cmt"><p class="ico_comments"></p><span>'+ comt.comtCmts +'</span></li>';
 	    strHtml += '            <li onclick="openComtRprtModal();" style="cursor: pointer;"><p class="ico_report"></p><span>'+ comt.rpptCount +'</span></li>';
 	    strHtml += '        </ul>';
 	    strHtml += '    </div>';
@@ -210,6 +212,8 @@
 	    
 	    $("#comtFirstBox").append(strHtml);
 	    $("#commentCount").text(comt.comtViews);
+		// 컴포넌트 권한 및 사용 유무
+		fn_chkComponetUseYn(boardAuth);
     }
     
   	//스크랩 체크
@@ -358,6 +362,44 @@
 				alert("오류 발생" + error);
 			}
 		});
+	}
+	
+	// 컴포넌트 사용 및 권한 여부 확인
+	function fn_chkComponetUseYn(data){
+		
+		if(data != null && data.length > 0){
+
+			// 좋아요 사용 여부
+			if(data[0].likeYn == "Y"){
+				$(".like").css("display","block");
+			}else if(data[0].likeYn == "N"){
+				$(".like").css("display","none");
+			}
+			
+			// 스크랩 사용 여부
+			if(data[0].scrapYn == "Y"){
+				$(".scrap").css("display","block");
+			}else if(data[0].scrapYn == "N"){
+				$(".scrap").css("display","none");
+			}
+			
+			// 조회수 사용 여부
+			if(data[0].viewsYn == "Y"){
+				$(".view").css("display","block");
+			}else if(data[0].viewsYn == "N"){
+				$(".view").css("display","none");
+			}
+			
+			// 댓글 사용 여부
+			if(data[0].cmtYn == "Y"){
+				$(".cmt").css("display","block");
+				$(".cmt_reg_btn ba-btn1").attr("disabled",false);
+			}else if(data[0].cmtYn == "N"){
+				$(".cmt").css("display","none");
+				$(".cmt_reg_btn ba-btn1").css("disabled",true);
+			}
+			
+		}
 	}
     </script>
 </body>
