--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_showingoff_detailpage.html
@@ -216,7 +216,7 @@
     				setCommentInfoHtml();
     				
     				ckClsHide(); // ck에디터 태그들 감춤
-    				setComment(comtSq);
+    				setComment(comtSq, "BOA");
     				followCheck(showOff.mbrSq);
     				otherComtWorkList(otherComt, "/community/showingOffDetail", showOff.mbrNcknm);
     				initOtherComtWorkListSwiper();
