작품 등록 ->  자랑하기 등록 null 체크 추가

--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
@@ -1882,7 +1882,8 @@ function myWorkReg(){
     			        contentType : false,
     			        processData : false,
     			        success: function(data) {
-    			        	if(data == 1){
+    			        	console.log(data);
+    			        	if(data >= 1){
     			        		modalAlertShow("작품이 등록되었습니다.", "myWorkList");
     			        	}else{
     			        		modalAlertShow("작품 등록에 실패했습니다. 다시 시도해주세요.", "myWorkList");
