--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
@@ -236,11 +236,11 @@
    		list.forEach( function (exhibit) {
    			
    			strHtml += '<div class="exhint_row">';
-	        strHtml += '    <div class="exhint_list_img"><img src="'+ exhibit.comtImgUrl +'" class="img-fit-contain" onclick="opneIssueDetail('+exhibit.comtSq+');" alt="" style="cursor: pointer;"></div>';
+	        strHtml += '    <div class="exhint_list_img"><img src="'+ exhibit.comtImgUrl +'" class="img-fit-contain" onclick="opneExhibit('+exhibit.comtSq+');" alt="" style="cursor: pointer;"></div>';
 	        strHtml += '    <div class="contents">';
 	        strHtml += '        <ul>';
 	        
-	        strHtml += '			<div onclick="opneIssueDetail('+exhibit.comtSq+');" style="cursor: pointer;">';
+	        strHtml += '			<div onclick="opneExhibit('+exhibit.comtSq+');" style="cursor: pointer;">';
 	        strHtml += '            	<li>';
 	        strHtml += '                	<div class="tit">';
 	        strHtml += '                    	<em>'+ exhibit.comtTitle +'</em>';
