[검수반려] [웹/모바일 > 전시소개&후기, 이슈 > 게시물의 타 회원 프로필 클릭] 타회원 마이페이지 이동 불가 [수정완료]

--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint_mo.html
@@ -266,7 +266,7 @@
    	        	strHtml += '                            <li class="pt5"><img src="/resources/img/mypage/ico_dauser.png" alt=""></li>';
    	        }
    	        
-   	        strHtml += '                            <li class="user_name"><span>'+ exhibit.mbrNcknm +'</span></li>';
+   	        strHtml += '                            <li class="user_name"><a href="/otherPage/main?mbrSq='+ exhibit.mbrSq +'"><span>'+ exhibit.mbrNcknm +'</span></a></li>';
    	        strHtml += '                        </ul>';
    	        strHtml += '                    </div>';
    	        strHtml += '                    <div class="icon_box">';
