--- a/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_exhint.html
@@ -261,7 +261,7 @@
 	        	strHtml += '                            <li class="pt5"><img src="/resources/img/img_new/ico_dauser.png" alt=""></li>';
 	        }
 	        
-	        strHtml += '                            <li class="user_name"><span>'+ exhibit.mbrNcknm +'</span></li>';
+	        strHtml += '                            <li class="user_name"><a href="/otherPage/main?mbrSq='+ exhibit.mbrSq +'"><span>'+ exhibit.mbrNcknm +'</span></a></li>';
 	        strHtml += '                        </ul>';
 	        strHtml += '                    </div>';
 	        strHtml += '                    <div class="icon_box">';
