--- a/src/main/resources/templates/thymeleaf/fo/community/community_issue_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_issue_mo.html
@@ -244,7 +244,7 @@
 	        	strHtml += '                            <li class="pt5"><img src="/resources/img/img_new/ico_dauser.png" alt=""></li>';
 	        }
 	        
-	        strHtml += '                            <li class="user_name"><span>'+ issue.mbrNcknm +'</span></li>';
+	        strHtml += '                            <li class="user_name"><a href="/otherPage/main?mbrSq='+ issue.mbrSq +'"><span>'+ issue.mbrNcknm +'</span></a></li>';
 	        strHtml += '                        </ul>';
 	        strHtml += '                    </div>';
 	        strHtml += '                    <div class="icon_box">';
