--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5772,23 +5772,52 @@ position: relative;background-color: #fbfbfb;}
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
-
-/* .cns-box3 {
+/* 매거진 전용 CSS 생성 시작 */
+.cns-box5 {
     width: 283px;
-    height: 100%;
+    height: 300px;
     border: #ececec 0px solid;
     margin-right: 18px;
     width: 100%;
+    padding: 15px;
 }
 
-.cns-box3 > img {
+.cns-box5 > img {
     width: 100%;
     height: 100%;
     max-height: 280px;
     max-width: 280px;
     border-radius: 50%;
-} */
+}
 
+.cns-box5 .cns-sb {
+	height: 178px;
+    padding: 30px 0px 42px 24px;
+}
+
+.cns-box5 .cns-sb .cns-p1 {
+    font-size: 19px;
+    font-weight: 600;
+    color: rgb(51, 51, 51);
+}
+
+.cns-box5 .cns-sb .cns-p2 {
+    font-size: 15px;
+    color: rgb(51, 51, 51);
+    padding-top: 12px;
+    width: 235px;
+    text-overflow: ellipsis;
+    white-space: normal;
+    line-height: 1.5;
+    height: 5.3em;
+    text-align: left;
+    overflow-wrap: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+} 
+/* 매거진 전용 CSS 생성 끝 */
 .hd-div4 .hd-img {
     width: 240px;
     height: 240px;
